[project]
name = "sylenium"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristian Angulo",email = "cristianangulonova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.32.0,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
